gcc/testsuite/rust/rustc/ui/rust-2024/unsafe-extern-blocks/safe-impl-trait.rs
trait Bar {}
safe impl Bar for () { }
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

